--- a/judo_profiles/templates/abstract/profile_base.html
+++ b/judo_profiles/templates/abstract/profile_base.html
@@ -18,7 +18,7 @@
             <table>
                 <tr>
                     <td>
-                        <p id="title" style="margin-top: 1rem;"><b>{% translate "Fighter profile of" %}:</b> {% block name %}{% endblock %}</p>
+                        <p id="title" style="margin-top: 1rem;"><b>{% translate "Fighter profile of" %}:</b></p>
                         <div  id="general_info" class="d-flex align-items-center flex-wrap justify-content-center mb-1">
                             {% block general_info %}{% endblock %}
                             <div>
