--- a/judo_profiles/templates/profiles/new.html
+++ b/judo_profiles/templates/profiles/new.html
@@ -55,6 +55,16 @@
         <input class="form-control" type="number" id="weight" min="20" max="500" step="0.1" placeholder="{% translate "Weight" %} (kg)" size="9" required>
         <script>document.getElementById("weight").value = "{{ profile.weight|default:"" }}".replace(",", ".")</script>
     </div>
+    {% block user_select %}
+        <div>
+            <select id="user" class="form-select">
+                <option value="">{% translate "Create new user" %}</option>
+                {% for user in users %}
+                    <option value="{{ user.id }}">{{ user }}</option>
+                {% endfor %}
+            </select>
+        </div>
+    {% endblock %}
 {% endblock %}
 
 {% block delete_positions %}
