--- a/judo_profiles/templates/users.html
+++ b/judo_profiles/templates/users.html
@@ -6,7 +6,10 @@
 {% block manage %}active" aria-current="page{% endblock %}
 
 {% block admin_actions %}
-    <a class="nav-link" href="{% url "users-new" %}">{% translate "New trainer" %}</a>
+    <a class="nav-link" href="{% url "users-new-trainer" %}">{% translate "New trainer" %}</a>
+    {% if request.user.is_superuser %}
+        <a class="nav-link" href="{% url "users-new-staff" %}">{% translate "New staff member" %}</a>
+    {% endif %}
 {% endblock %}
 
 {% block style %}
@@ -25,6 +28,7 @@
                 <option value="" selected>{% translate "All" %}</option>
                 <option value="u">{% translate "Judoka" %}</option>
                 <option value="t">{% translate "Trainers" %}</option>
+                <option value="s">{% translate "Staff" %}</option>
             </select>
         </div>
         <input class="form-control mx-auto" type="search"
