--- a/judo_profiles/templates/users/manage.html
+++ b/judo_profiles/templates/users/manage.html
@@ -7,15 +7,20 @@
 {% block style %}
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     <script>
-        const delay = ms => new Promise(res => setTimeout(res, ms))
-        async function copy_token(token){
-            const button = document.getElementById("copy")
+        async function copy_token(button){
+            let token = button.parentElement.children[0].value
             await navigator.clipboard.writeText(token)
-            button.innerHTML = "{% translate "Key copied" %}"
-            button.classList.add("active")
-            await delay(1500)
-            button.innerHTML = "{% translate "Copy key" %}"
-            button.classList.remove("active")
+            button.children[0].classList.replace("bi-clipboard", "bi-clipboard-check")
+        }
+        function toggle_token(button){
+            var input = button.parentElement.children[0]
+            if (input.type == "text"){
+                input.type = "password"
+                button.children[0].classList.replace("bi-eye-slash", "bi-eye")
+            } else {
+                input.type = "text"
+                button.children[0].classList.replace("bi-eye", "bi-eye-slash")
+            }
         }
     </script>
 {% endblock %}
@@ -65,8 +70,33 @@
                                         <td class="pe-3">{% translate "Key expired, without being used" %}</td>
                                         <td><button class="btn btn-secondary text-nowrap" name="renew">{% translate "Renew key" %}</button></td>
                                     {% else %}
-                                        <td class="pe-3">{{ days }}</td>
-                                        <td class="pe-2"><button id="copy" class="btn btn-secondary text-nowrap" onclick="copy_token('{{ user.token }}'); return false;">{% translate "Copy key" %}</button></td>
+                                         <td class="pe-2"><button type="button" class="btn btn-secondary text-nowrap" data-bs-toggle="modal" data-bs-target="#token_modal">{% translate "Show key" %}</button></td>
+                                        <div class="modal fade" id="token_modal" tabindex="-1" aria-labelledby="token_modal_label" aria-hidden="true">
+                                            <div class="modal-dialog ">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h1 class="modal-title fs-5" id="token_modal_label">{% translate "Key" %}</h1>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <ul>
+                                                            <li>{{ days }}</li>
+                                                            <li>
+                                                                {% translate "Username" %}: {{ profile.user }}
+                                                            </li>
+                                                        </ul>
+                                                        <div class="input-group">
+                                                            <input id="token" type="password" class="form-control" value="{{ user.token }}" aria-label="Key" readonly>
+                                                            <button class="btn btn-outline-secondary" type="button" onclick="toggle_token(this)"><i class="bi bi-eye"></i></button>
+                                                            <button class="btn btn-outline-secondary" type="button" onclick="copy_token(this)"><i class="bi bi-clipboard"></i></button>
+                                                        </div>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% translate "Ok" %}</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     {% endif %}
                                     <td><button class="btn btn-secondary text-nowrap" name="delete">{% translate "Delete key" %}</button></td>
                                 </tr>
