--- a/judo_profiles/templates/techniques.html
+++ b/judo_profiles/templates/techniques.html
@@ -15,9 +15,9 @@
             hx-trigger="input changed delay:500ms, keyup[key=='Enter'], click delay:50ms from:#refresh, load"
             hx-target="#techniques"
             hx-headers='{"X-CSRFTOKEN": "{{ csrf_token }}"}'>
-        <button id="refresh" class="d-none"></button
+        <button id="refresh" class="d-none"></button>
         <div class="table-responsive">
-            <table class="table mx-auto mt-4" style="max-width: 40rem;">
+            <table class="table mx-auto mt-4" style="max-width: 42.1rem;">
                 <thead>
                     <th>{% translate "Codename" %}</th>
                     <th>{% translate "Name" %}</th>
